--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A template for creating Model Context Protocol (MCP) servers",
   "type": "module",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "lint": "eslint . --ext .ts",
     "test": "vitest"
