--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "1.0.0",
   "description": "A template for creating Model Context Protocol (MCP) servers",
   "type": "module",
+  "main": "dist/index.js",
+  "bin": {
+    "example-tool": "dist/index.js"
+  },
+  "files": [
+    "dist"
+  ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "lint": "eslint . --ext .ts",
-    "test": "vitest"
+    "test": "vitest",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "mcp",
