--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "dist/index.js",
   "bin": {
-    "example-tool": "dist/index.js"
+    "example-mcp-tool": "dist/index.js"
   },
   "files": [
     "dist"
@@ -19,7 +19,9 @@
     "dev": "tsx src/index.ts",
     "lint": "eslint . --ext .ts",
     "test": "vitest",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "link": "npm link",
+    "unlink": "npm unlink"
   },
   "keywords": [
     "mcp",
